[package]
name = "pid-wait"
version = "0.1.0"
authors = ["Grant Nichol <me@grantnichol.com>"]
description = "Wait until a specified process exits. Currently only searches through processes with a controlling tty."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syscalls = "0.3.3"
clap = "2.33.3"
nix = "0.19.1"